Project

General

Profile

Actions

Bug #42088

closed

'ceph -s' does not show standbys if there are no filesystems

Added by Sage Weil over 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Category:
Administration/Usability
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDSMonitor
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

- start up mon, mgr, osd
- start up mds (or two)
- but do not create a file system...

ceph -s


gnit:build (wip-ceph-daemon) 02:17 PM $ bin/ceph -c c -k k -s
*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
  cluster:
    id:     0a464092-dfd0-11e9-b903-002590e526e8
    health: HEALTH_OK

  services:
    mon: 2 daemons, quorum a,b (age 90s)
    mgr: x(active, since 46s), standbys: y
    osd: 0 osds: 0 up, 0 in

  data:
    pools:   0 pools, 0 pgs
    objects: 0 objects, 0 B
    usage:   0 B used, 0 B / 0 B avail
    pgs:     

gnit:build (wip-ceph-daemon) 02:17 PM $ bin/ceph -c c -k k fs dump
*** DEVELOPER MODE: setting PATH, PYTHONPATH and LD_LIBRARY_PATH ***
dumped fsmap epoch 3
e3
enable_multiple, ever_enabled_multiple: 0,0
compat: compat={},rocompat={},incompat={1=base v0.20,2=client writeable ranges,3=default file layouts on dirs,4=dir inode in separate object,5=mds uses versioned encoding,6=dirfrag is stored in omap,8=no anchor table,9=file layout v2,10=snaprealm v2}
legacy client fscid: -1

No filesystems configured
Standby daemons:

4116:   [v2:10.3.64.23:6922/4081174229,v1:10.3.64.23:6923/4081174229] 'k' mds.-1.0 up:standby seq 1
4124:   [v2:10.3.64.23:6924/462925897,v1:10.3.64.23:6925/462925897] 'j' mds.-1.0 up:standby seq 1


Related issues 1 (0 open1 closed)

Copied to CephFS - Backport #43509: nautilus: 'ceph -s' does not show standbys if there are no filesystemsResolvedNathan CutlerActions
Actions #1

Updated by Patrick Donnelly over 4 years ago

  • Assignee set to Patrick Donnelly
  • Target version set to v15.0.0
  • Start date deleted (09/27/2019)
  • Source set to Development
  • Backport set to nautilus
  • Component(FS) MDSMonitor added
Actions #2

Updated by Patrick Donnelly over 4 years ago

  • Status changed from 12 to New
Actions #3

Updated by Patrick Donnelly over 4 years ago

  • Status changed from New to Pending Backport
  • Pull request ID set to 32307
Actions #4

Updated by Patrick Donnelly over 4 years ago

  • Status changed from Pending Backport to Fix Under Review
Actions #5

Updated by Patrick Donnelly over 4 years ago

  • Category set to Administration/Usability
  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #43509: nautilus: 'ceph -s' does not show standbys if there are no filesystems added
Actions #7

Updated by Nathan Cutler about 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF