mon: print FSMap if standbys exist

Fixes: https://tracker.ceph.com/issues/42088
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit cd6f88d7ebe17edcf657d646d733c207930e4351)